don't make it ugly just because

--- a/views/layouts/sketches.handlebars
+++ b/views/layouts/sketches.handlebars
@@ -3,14 +3,26 @@
 
 <head>
   <meta charset="utf-8">
-  <title>DEMOS</title>
-  <link href="/style.css" rel="stylesheet" />
+  <title>p5.websocket demos</title>
+  <meta charset="utf-8">
+  <meta name="description" content="Demo sketches for the p5.websocket library.">
+  <meta name="author" content="Adam Bachman https://github.com/abachman">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- FONT
+  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <link href="/css/normalize.css" rel="stylesheet" />
+  <link href="/css/skeleton.css" rel="stylesheet" />
+  <link href="/css/style.css" rel="stylesheet" />
 </head>
 
 <body>
-
-  {{{body}}}
-
+  <div class="container">
+    <div class="row">
+      {{{body}}}
+    </div>
+  </div>
 </body>
 
 </html>
