style and README updates

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,7 +1,33 @@
-<h1>p5.websockets Example Sketches</h1>
+<div class="row">
+  <div class="one column">
+    <h2>p5.websockets</h2>
+  </div>
+</div>
 
-<ul>
-  <li><a href="/sketch/collaborative-pixel-art">Collaborative Pixel Art</a></li>
-  <!-- <li><a href="/sketch/movers">Movers</a></li>
-  <li><a href="/sketch/poppers">Poppers</a></li> -->
-</ul>
+<div class="row">
+  <div class="one-half column">
+    <h3>Example Sketches</h3>
+
+    <p><a href="/sketch/collaborative-pixel-art">Collaborative Pixel Art</a></p>
+    <!--
+      <p><a href="/sketch/movers">Movers</a></p>
+      <p><a href="/sketch/poppers">Poppers</a></p>
+    -->
+    </ul>
+  </div>
+
+  <div class="one-half column">
+    <h3>Supporting Libraries</h3>
+
+    <p>
+      <a href="https://github.com/abachman/p5-websocket-server/" target="_blank">
+        p5.js Websocket Server <i class="material-icons">launch</i>
+      </a>
+    </p>
+    <p>
+      <a href="https://github.com/abachman/p5.websocket/" target="_blank">
+        p5.websocket Library <i class="material-icons">launch</i>
+      </a>
+    </p>
+  </div>
+</div>
