--- a/views/layouts/sketches.handlebars
+++ b/views/layouts/sketches.handlebars
@@ -11,6 +11,7 @@
 
   <!-- FONT
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link href="/css/normalize.css" rel="stylesheet" />
   <link href="/css/skeleton.css" rel="stylesheet" />
