--- a/views/sketch.handlebars
+++ b/views/sketch.handlebars
@@ -2,7 +2,7 @@
   <a href="/">← Back</a>
   <h1>{{ name }}</h1>
 </div>
-<iframe src="/embed/{{name}}" id="sketch-iframe" />
+<iframe src="/embed/{{name}}" id="sketch-iframe"></iframe>
 
 <a href="/sketches/{{name}}.js">view code</a>
 
