--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,6 +8,9 @@
   <div class="one-half column">
     <h3>Example Sketches</h3>
 
+    <p><a href="/sketch/poppers">Color Poppers</a></p>
+    <p><a href="/sketch/line-drawings">Line Drawings</a></p>
+    <p><a href="/sketch/triangle-clicker">Triangle Clicker</a></p>
     <p><a href="/sketch/collaborative-pixel-art">Collaborative Pixel Art</a></p>
     <!--
       <p><a href="/sketch/movers">Movers</a></p>
