style changes to make iframe more compact

--- a/views/layouts/sketches.handlebars
+++ b/views/layouts/sketches.handlebars
@@ -9,10 +9,10 @@
   <meta name="author" content="Adam Bachman https://github.com/abachman">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+  <!-- FONTS –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+  <!-- STYLES ––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="/css/normalize.css" rel="stylesheet" />
   <link href="/css/skeleton.css" rel="stylesheet" />
   <link href="/css/style.css" rel="stylesheet" />
