add battle spots sketch (initial version)

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -12,11 +12,7 @@
     <p><a href="/sketch/line-drawings">Line Drawings</a></p>
     <p><a href="/sketch/triangle-clicker">Triangle Clicker</a></p>
     <p><a href="/sketch/collaborative-pixel-art">Collaborative Pixel Art</a></p>
-    <!--
-      <p><a href="/sketch/movers">Movers</a></p>
-      <p><a href="/sketch/poppers">Poppers</a></p>
-    -->
-    </ul>
+    <p><a href="/sketch/battle-spots">Battle Spots</a></p>
   </div>
 
   <div class="one-half column">
