--- a/views/sketch.handlebars
+++ b/views/sketch.handlebars
@@ -2,5 +2,6 @@
   <a href="/">← Back</a>
   <h1>{{ name }}</h1>
 </div>
-<iframe src="/embed/{{name}}" id="sketch-iframe" class="iframe" scrolling="no" frameborder="0" height="500"></iframe>
+<iframe src="/embed/{{name}}" id="sketch-iframe" class="iframe" scrolling="no" frameborder="0"
+  height="{{height}}"></iframe>
 <a href="/sketches/{{name}}.js">view code</a>
